# TestForge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
examples/testcases/: baidu_search.yaml
src/forge/: llm.py  main.py
src/forge/agent/: automation_agent.py  forge_agent.py  tools.py
src/forge/agent/prompts/: automation.py
src/forge/api/: models.py  server.py  storage.py  store.py
src/forge/api/routes/: tasks.py
src/forge/model/: __init__.py  testcase.py
src/forge/runtime/: interface.py  kernel.py  session.py
src/forge/storage/testcases/: custom_4e0f4b54-5f54-4659-8654-50bee0334f23.yaml  custom_4f511656-6d38-46cc-adb2-e3434669d0af.yaml  custom_dd5d8a7a-94c7-4165-a69e-b7436e60382e.yaml
tests/api/: test_tasks.py
tests/integration/: test_automation_agent.py  test_forge_agent.py  test_kernel.py  test_llm.py  test_session.py  test_session_state.py  test_tools.py
tests/unit/: test_schema.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/components/ui/: button.tsx
web/src/lib/: api.ts
web/src/pages/: TaskDetailPage.tsx  TaskListPage.tsx
